# towonel

./: .dockerignore  .gitignore  .goreleaser.yaml  Cargo.toml  Dockerfile  Dockerfile.agent  Dockerfile.node  LICENSE  Makefile  README.md  cliff.toml  deny.toml  docker-compose.yml  lefthook.yml  mise.toml  renovate.json  typos.toml
.forgejo/workflows/: build.yml  bump.yml  ci.yml  release.yml
crates/towonel-agent/: Cargo.toml
crates/towonel-agent/src/: add_agent.rs  config.rs  hub_client.rs  init.rs  main.rs  metrics.rs  publish_tls.rs  stateless.rs  tunnel.rs
crates/towonel-agent/src/tunnel/: proxy_protocol.rs
crates/towonel-cli/: Cargo.toml
crates/towonel-cli/src/: entry_cmds.rs  invite_cmds.rs  main.rs  tenant_cmds.rs
crates/towonel-common/: Cargo.toml
crates/towonel-common/src/: auth.rs  client_state.rs  config_entry.rs  hostname.rs  hub_error.rs  identity.rs  invite.rs  lib.rs  metrics.rs  ownership.rs  process_metrics.rs  protocol.rs  random_name.rs  routing.rs  routing_tests.rs  shutdown.rs  sni.rs  time.rs  tls_policy.rs  tunnel.rs
crates/towonel-common/tests/: snapshots_test.rs
crates/towonel-common/tests/snapshots/: README.md  config_payload.cbor  signed_entry.cbor
crates/towonel-node/: Cargo.toml
crates/towonel-node/src/: config.rs  init.rs  main.rs
crates/towonel-node/src/admin/: entry.rs  hub.rs  invite.rs  mod.rs  tenant.rs
crates/towonel-node/src/edge/: acme.rs  health.rs  mod.rs  proxy_protocol.rs  router.rs  subscribe.rs  tls.rs
crates/towonel-node/src/hub/: admin_tests.rs  api_tests.rs  auth.rs  federation.rs  federation_tests.rs  metrics.rs  mod.rs  observability_tests.rs  peer_status.rs  test_helpers.rs
crates/towonel-node/src/hub/api/: admin.rs  agent_heartbeat.rs  bootstrap.rs  edge_invites.rs  entries.rs  federation_status.rs  invites.rs  metrics_handler.rs  mod.rs  subscribe.rs
crates/towonel-node/src/hub/db/: federation.rs  invites.rs  liveness.rs  mod.rs  types.rs
crates/towonel-node/src/hub/db/entities/: agent_liveness.rs  edge_invites.rs  edges.rs  federation_push_state.rs  invite_hostnames.rs  invites.rs  mod.rs  tenant_removals.rs
crates/towonel-node/src/hub/db/migration/: m20260422_000000_initial.rs  m20260428_000000_invite_v2.rs  m20260428_000001_agent_liveness.rs  m20260428_000002_edge_invite_v2.rs  m20260428_000003_drop_federation_push_state.rs  mod.rs
crates/turbo-agent/: Cargo.toml
crates/turbo-agent/src/: add_agent.rs  config.rs  init.rs  main.rs  publish_tls.rs  tunnel.rs
crates/turbo-cli/: Cargo.toml
crates/turbo-cli/src/: entry_cmds.rs  invite_cmds.rs  main.rs  tenant_cmds.rs
crates/turbo-common/: Cargo.toml
crates/turbo-common/src/: client_state.rs  config_entry.rs  hostname.rs  identity.rs  invite.rs  lib.rs  ownership.rs  protocol.rs  random_name.rs  routing.rs  shutdown.rs  sni.rs  time.rs  tls_policy.rs  tunnel.rs
crates/turbo-common/tests/: snapshots_test.rs
crates/turbo-common/tests/snapshots/: README.md  config_payload.cbor
crates/turbo-node/: Cargo.toml
crates/turbo-node/migrations/: 20260415090000_initial.sql  20260416100000_invites.sql  20260417100000_tenant_removals.sql  20260417110000_entries_reset.sql  20260417120000_invites_add_pq_pubkey.sql  20260418100000_edge_invites.sql  20260420100000_federated_tenants.sql
crates/turbo-node/src/: config.rs  init.rs  main.rs
crates/turbo-node/src/edge/: acme.rs  health.rs  mod.rs  router.rs  subscribe.rs  tls.rs
crates/turbo-node/src/hub/: admin_tests.rs  api_tests.rs  auth.rs  federation.rs  federation_tests.rs  mod.rs  test_helpers.rs
crates/turbo-node/src/hub/api/: admin.rs  edge_invites.rs  entries.rs  invites.rs  mod.rs  subscribe.rs
crates/turbo-node/src/hub/db/: federation.rs  invites.rs  mod.rs  types.rs
crates/turbo-node/src/hub/db/entities/: edge_invites.rs  entries.rs  federated_tenant_hostnames.rs  federated_tenants.rs  mod.rs
crates/turbo-node/src/hub/db/migration/: m20260422_000000_initial.rs  m20260424_000000_federation_push_state.rs  mod.rs
deploy/grafana/: towonel-agent.json  towonel-hub.json
examples/: agent.env.example  agent.toml  node.env.example  node.toml
src/: lib.rs
tests/: integration.rs
