[package]
name = "towonel"
version.workspace = true
edition = "2024"
publish = false

[workspace.package]
version = "0.0.1"

[workspace.lints.rust]
unsafe_code = "forbid"
ambiguous_glob_reexports = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }

# Force you to think about error handling
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

# Common pedantic noise — turn off from the start
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace]
resolver = "2"
members = [
  "crates/towonel-common",
  "crates/towonel-agent",
  "crates/towonel-node",
]

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"

[dev-dependencies]
towonel-common = { path = "crates/towonel-common" }
iroh = { workspace = true }
tokio = { workspace = true }


[workspace.dependencies]
iroh = "0.98.0"
ed25519-dalek = { version = "2.2", features = ["serde", "rand_core"] }
ciborium = "0.2"
sea-orm = { version = "1", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
  "with-json",
] }
sea-orm-migration = { version = "1", default-features = false, features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
sea-query = "0.32"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "net",
  "io-util",
  "signal",
] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
hex = "0.4"
clienthello = "0.1"
anyhow = "1"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = [
  "trace",
  "request-id",
  "util",
  "limit",
] }
rand_core = { version = "0.10.0" }
getrandom = "0.4"
fastrand = "2"
reqwest = { version = "0.13", features = ["json", "stream"] }
eventsource-stream = "0.2"
prometheus = { version = "0.14", default-features = false, features = [
  "process",
] }
base64 = "0.22"
sha2 = "0.11.0-rc.5"
url = "2"
fips204 = { version = "0.4", default-features = false, features = [
  "ml-dsa-65",
  "default-rng",
] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"
tower_governor = { version = "0.8", default-features = false, features = [
  "axum",
] }
aes-gcm = "0.10"
argon2 = "0.5"
subtle = "2.6"
zeroize = { version = "1", features = ["derive"] }
rpassword = "7"
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = [
  "std",
  "tls12",
  "ring",
] }
rustls-pemfile = "2"
instant-acme = "0.8"
rcgen = "0.14"
webpki-roots = "1.0"
arc-swap = "1.7"
moka = { version = "0.12", features = ["future"] }
backon = "1"
ppp = "2"
papaya = "0.2"
smallvec = "1"
tokio-util = { version = "0.7", features = ["rt"] }
blake3 = "1"
normpath = "1"
petname = { version = "3", default-features = false, features = [
  "default-rng",
  "default-words",
] }
envy = "0.4"
tabled = "0.20"
