[package]
name = "towonel-agent"
version = "0.0.1"
edition = "2024"
publish = false

[[bin]]
name = "towonel-agent"
path = "src/main.rs"

[dependencies]
towonel-common = { path = "../towonel-common" }
iroh = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
ciborium = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }

[lints]
workspace = true
