[package]
name = "towonel-agent"
version.workspace = true
edition = "2024"
publish = false

[[bin]]
name = "towonel-agent"
path = "src/main.rs"

[dependencies]
towonel-common = { path = "../towonel-common" }
iroh = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
ciborium = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }
ppp = { workspace = true }
arc-swap = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
getrandom = { workspace = true }

[lints]
workspace = true
