[package]
name = "towonel-common"
version.workspace = true
edition = "2024"
publish = false

[dependencies]
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
fips204 = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
iroh = { workspace = true }
ciborium = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
clienthello = { workspace = true }
anyhow = { workspace = true }
getrandom = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true }
prometheus-client = { workspace = true }
petname = { workspace = true }
ppp = { workspace = true }

[lints]
workspace = true
