[package]
name = "towonel-node"
version.workspace = true
edition = "2024"
publish = false

[[bin]]
name = "towonel"
path = "src/main.rs"

[dependencies]
towonel-common = { path = "../towonel-common" }
iroh = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
ciborium = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
# Admin subcommands depend on the following crates.
humantime = "2"
aes-gcm = { workspace = true }
argon2 = { workspace = true }
rpassword = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
prometheus = { workspace = true }
base64 = { workspace = true }
getrandom = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }
# Used by the SSE route-subscriber client in edge-only mode (and by hub API tests).
reqwest = { workspace = true }
eventsource-stream = { workspace = true }
tower_governor = { workspace = true }
subtle = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
instant-acme = { workspace = true }
arc-swap = { workspace = true }
socket2 = { workspace = true }
moka = { workspace = true }
zeroize = { workspace = true }
backon = { workspace = true }
papaya = { workspace = true }
smallvec = { workspace = true }
normpath = { workspace = true }
fastrand = { workspace = true }
envy = { workspace = true }
tabled = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
