[package]
name = "turbo-agent"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "turbo-agent"
path = "src/main.rs"

[dependencies]
turbo-common = { path = "../turbo-common" }
iroh = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
ciborium = { workspace = true }
ed25519-dalek = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }

[lints]
workspace = true
