[package]
name = "turbo-cli"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "turbo-cli"
path = "src/main.rs"

[dependencies]
turbo-common = { path = "../turbo-common" }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
getrandom = { workspace = true }
ed25519-dalek = { workspace = true }
reqwest = { workspace = true }
ciborium = { workspace = true }
humantime = "2"
aes-gcm = { workspace = true }
argon2 = { workspace = true }
base64 = { workspace = true }
rpassword = { workspace = true }
zeroize = { workspace = true }
rustls = { workspace = true }

[lints]
workspace = true
